[project]
name = "a2a-samples-any_agent"
version = "0.1.0"
description = "Adversarial simulation between attacker and defender agents testing AI robustness and resistance to adversarial prompting using A2A protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "any_agent[all,a2a]>=0.23.0",
]
